# FilterDemo

CrossCompileTest/: configure.sh
CrossCompileTest/proj.cmake/: CMakeLists.txt
GPUImage/app/: build.gradle  proguard-rules.pro
GPUImage/app/src/androidTest/java/com/visionfunny/gpuimage/: ExampleInstrumentedTest.java
GPUImage/app/src/main/: AndroidManifest.xml
GPUImage/app/src/main/java/com/visionfunny/gpuimage/sample/: ActivityCamera.java  ActivityGallery.java  ActivityMain.java  GPUImageFilterTools.java
GPUImage/app/src/main/java/com/visionfunny/gpuimage/sample/utils/: CameraHelper.java  CameraHelperBase.java  CameraHelperGB.java
GPUImage/app/src/main/res/layout/: activity_camera.xml
GPUImage/gradle/wrapper/: gradle-wrapper.properties
xxxtest/VisFilterDemo/app/: build.gradle
xxxtest/VisFilterDemo/app/src/androidTest/java/com/tecno/visfilterdemo/: ExampleInstrumentedTest.java
xxxtest/VisFilterDemo/app/src/main/: AndroidManifest.xml
xxxtest/VisFilterDemo/app/src/main/cpp/: GLCommon.h  GLProgram.cpp  GLProgram.h  VISImageFilter.cpp  VISImageFilter.h  native-lib.cpp
xxxtest/VisFilterDemo/app/src/main/java/com/tecno/visfilterdemo/: MainActivity.java
xxxtest/VisFilterDemo/app/src/main/res/values/: strings.xml
xxxtest/VisFilterDemo/app/src/test/java/com/tecno/visfilterdemo/: ExampleUnitTest.java
xxxtest/VisFilterDemo/gradle/wrapper/: gradle-wrapper.properties
